# VulkanVoxel

./: .gitignore  CMakeLists.txt  main.cpp
res/shaders/: compile_shaders.sh
res/shaders/triangle/: triangle.vert
src/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  Engine.cpp  Engine.h  Extension.cpp  Extension.h  ExtensionConfiguration.cpp  ExtensionConfiguration.h  HelloTriangleApplication.cpp  HelloTriangleApplication.h  PhysicalDevice.cpp  PhysicalDevice.h  ValidationLayer.cpp  ValidationLayer.h  ValidationLayerConfiguration.cpp  ValidationLayerConfiguration.h
